Openllet,DLEJena2/openllet/output_manualJarChoice/IncrementalConsistencyExample_compile.txt
openllet\examples\IncrementalConsistencyExample.java:117: error: cannot access Provider
		final OWLOntologyManager manager = OWLManager.createOWLOntologyManager();
		                                             ^
  class file for com.google.inject.Provider not found
openllet\examples\IncrementalConsistencyExample.java:214: error: cannot find symbol
		JenaReasoner.printIterator(model.validate().getReports(), "Validation Results");
		^
  symbol:   variable JenaReasoner
  location: class IncrementalConsistencyExample
openllet\examples\IncrementalConsistencyExample.java:227: error: cannot find symbol
		JenaReasoner.printIterator(model.validate().getReports(), "Validation Results");
		^
  symbol:   variable JenaReasoner
  location: class IncrementalConsistencyExample
openllet\examples\IncrementalConsistencyExample.java:242: error: cannot find symbol
		JenaReasoner.printIterator(model.validate().getReports(), "Validation Results");
		^
  symbol:   variable JenaReasoner
  location: class IncrementalConsistencyExample
4 errors
